# raftify

./: .dockerignore  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  com.sh  dev.py  docker-compose-3node.yml  glue-entries.py  glue-metadata.py  mypy.ini  print-entries.py  print-mdb-entries.py  pyproject.toml  pytest.ini  requirements-build.txt  requirements-dev.txt  requirements.txt  riteraft.sh  setup.py
binding/javascript/: .node  Cargo.toml  Makefile  example.js  package.json
binding/javascript/src/: abstract_types.rs  lib.rs  raft_bootstrapper.rs  raft_node.rs  tmp_state_machine.rs
binding/python/: Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  raftify.pyi  requirements.txt
binding/python/examples/: cluster_config.toml  deserializer.py  main.py  requirements.txt  state_machine.py  utils.py  web_server_api.py
binding/python/examples/cli/: README.md  setup.py
binding/python/examples/cli/raftify_cli/: cli.py
binding/python/examples/client/: README.md  main.py
binding/python/misc/: bootstrap-cluster.tmux.sh
binding/python/src/: lib.rs
binding/python/src/bindings/: abstract_types.rs  cli.rs  cluster_join_ticket.rs  confchange_request.rs  config.rs  deserializer.rs  errors.rs  formatter.rs  fsm.rs  initial_role.rs  logger.rs  mod.rs  peer.rs  peers.rs  raft_bootstrapper.rs  raft_client.rs  raft_facade.rs  raft_node.rs  role.rs  slogger.rs  state_machine.rs  utils.rs
binding/python/src/bindings/raft_rs/: config.rs  mod.rs  readonly_option.rs
binding/python/src/bindings/raft_rs/eraftpb/: conf_change_single.rs  conf_change_transition.rs  conf_change_type.rs  conf_change_v2.rs  conf_state.rs  entry.rs  entry_type.rs  message.rs  message_type.rs  mod.rs  snapshot.rs  snapshot_metadata.rs
binding/python/tests/: Makefile  constant.py  data_replication.py  leader_election.py  requirements.txt  utils.py
binding/python/tests/fixtures/: 1-node-example.toml  3-node-example.toml
binding/python/tests/harness/: constant.py  logger.py  raft_server.py  state_machine.py
cli/: Cargo.toml  build.rs
examples/: Cargo.toml
examples/memstore/: Cargo.toml  Makefile  README.md  cluster_config.toml  common_raftnode_config.toml  config.toml  main.py
examples/memstore/dynamic-members/: Cargo.toml  docker-compose.yml
examples/memstore/dynamic-members/src/: main.rs
examples/memstore/src/: lib.rs  main.rs  state_machine.rs  utils.rs  web_server_api.rs
examples/memstore/src/cli/: main.rs
examples/memstore/src/client/: main.rs
examples/memstore/static-members/: Cargo.toml  cluster_config.toml  docker-compose.yml  test-cluster.sh
examples/memstore/static-members/src/: main.rs  utils.rs
examples/memstore/static-members/src/client/: main.rs
harness/: Cargo.toml  Makefile  config.toml
harness/fixtures/: 1-node-example.toml  3-node-example.toml  5-node-example.toml
harness/integration-test-runner/: Cargo.toml
harness/integration-test-runner/src/: lib.rs
harness/src/: cleaner.rs  config.rs  constant.rs  lib.rs  logger.rs  raft.rs  raft_server.rs  state_machine.rs  test_enviorment.rs  test_enviorment_utils.rs  test_environment.rs  test_utils.rs  utils.rs
harness/tests/: bootstrap.rs  data_replication.rs  leader_election.rs  mod.rs  test_data_replication.rs  test_dynamic_bootstrap.rs  test_leader_election_in_five_node_cluster.rs  test_leader_election_in_three_node_cluster.rs  test_static_bootstrap.rs
json_test/: Entries.jsonl  Metadata.jsonl
misc/: 3-node-example.sh  3-node-static-cluster.zellij.kdl  README.md  bootstrap-3-node-static-cluster.zellij.kdl  bootstrap-3-node-static-cluster.zellij.sh  bootstrap-cluster.tmux.sh  bootstrap-dynamic-cluster.tmux.sh  bootstrap-memstore-cluster.tmux.sh  bootstrap-static-cluster.tmux.sh  (+7 more)
raftify/: Cargo.toml  __init__.py  build.rs  cli.py  config.py  config.toml  deserializer.py  error.py  follower_role.py  fsm.py  lmdb.py  logger.py  mailbox.py  message_sender.py  pb_adapter.py  peer.py  peers.py  raft_client.py  raft_client_response.py  raft_cluster.py  raft_facade.py  raft_node.py  raft_server.py  raft_service.py  raft_utils.py  request_message.py  response_message.py  rraft_deserializer.py  utils.py
raftify-cli/: Cargo.toml  build.rs
raftify-cli/src/: mod.rs
raftify-cli/src/commands/: debug.rs  describe.rs  mod.rs
raftify/codec/: abc.py  pickle.py
raftify/log_entry/: abc.py  set_command.py
raftify/proto/: raft_inspection_service.proto  raft_manipulation_service.proto  raft_service.proto
raftify/protos/: eraftpb_pb2.py  eraftpb_pb2.pyi  raft_service.proto  raft_service_pb2.py  raft_service_pb2.pyi  raft_service_pb2_grpc.py
raftify/src/: cluster_join_ticket.rs  config.rs  custom_callbacks.rs  deserializer.rs  error.rs  follower_role.rs  formatter.rs  lib.rs  peer.rs  peers.rs  raft_bootstrapper.rs  raft_client.rs  raft_facade.rs  raft_server.rs  raft_service.rs  request_message.rs  response_message.rs  utils.rs
raftify/src/cli/: mod.rs
raftify/src/cli/commands/: debug.rs  dump.rs  mod.rs  restore.rs  utils.rs
raftify/src/config/: config_builder.rs  mod.rs
raftify/src/log_entry/: mod.rs
raftify/src/raft_node/: bootstrap.rs  error.rs  mod.rs  response_sender.rs  role.rs  utils.rs
raftify/src/raft_service/: inspection_service.rs  manipulation_service.rs  mod.rs
raftify/src/request/: local_request_message.rs  mod.rs  self_request_message.rs  server_request_message.rs
raftify/src/request/common/: confchange_request.rs  mod.rs
raftify/src/response/: local_response_message.rs  mod.rs  server_response_message.rs
raftify/src/state_machine/: mod.rs
raftify/src/storage/: heed.rs  heed_storage.rs  mod.rs  utils.rs
raftify/src/storage/heed_storage/: codec.rs  mod.rs  utils.rs
raftify/src/storage/inmemory_storage/: mod.rs
raftify/src/storage/rocksdb_storage/: codec.rs  constant.rs  mod.rs
raftify/src/utils/: macros.rs  membership.rs  mod.rs  oneshot_mutex.rs
raftify/state_machine/: abc.py  hashstore.py
raftify/storage/: abc.py  lmdb.py  memstore.py
(+104 files in other folders)
