[workspace]
resolver = "2"
members = [
    "raftify",
    "harness",
    "examples",
    "examples/memstore",
    "examples/memstore/dynamic-members",
    "examples/memstore/static-members",
]
default-members = [
    "raftify",
    "harness",
    "examples",
    "examples/memstore",
    "examples/memstore/dynamic-members",
    "examples/memstore/static-members",
]

[workspace.package]
version = "0.1.47"
authors = ["Lablup Inc."]
edition = "2021"
description = "Experimental High level Raft framework"
license = "MIT/Apache-2.0"
repository = "https://github.com/lablup/raftify"
keywords = ["raft", "distributed-systems", "ha"]
categories = ["distributed-systems", "database-implementations"]
homepage = "https://github.com/lablup/raftify"

[workspace.dependencies]
raftify = { path = "raftify" }
example-harness = { path = "examples" }
memstore-example-harness = { path = "examples/memstore" }
