[package]
name = "harness"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
raftify.workspace = true

actix-rt = "2.0"
actix-web = "4.0.0"
bincode = "1.3"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
slog-async = "2"
slog-term = "2"
slog = "2"
slog-envlogger = "2.2"
structopt = "0.3"
tokio = { version = "1.4", features = ["full"] }
toml = "0.8.8"
futures = "0.3.29"
once_cell = "1.8.0"
