[package]
name = "harness"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
raftify.workspace = true

actix-rt = "2.10"
actix-web = "4.9.0"
bincode = "1.3"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
slog-async = "2"
slog-term = "2"
slog = "2"
slog-envlogger = "2.2"
structopt = "0.3"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8.19"
futures = "0.3.30"
const_format = "0.2.33"
lazy_static = "1.5.0"
fs2 = "0.4.3"
sloggers = "2.2.0"
