[package]
name = "raftify_cli"
version = "0.1.82"
edition = "2021"
description = "Raftify CLI tool"
license = "MIT/Apache-2.0"
build = "build.rs"

[dependencies]
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2"
built = "0.5"
clap = { version = "4.5.18", features = ["derive"] }
raftify = { version = "=0.1.82", features = ["heed_storage", "inmemory_storage", "rocksdb_storage"] }
comfy-table = "7.1.1"
cfmt = { version = "0.1.0", package = "const_format" }

[lib]
name = "raftify_cli"
path = "src/mod.rs"

[build-dependencies]
tonic-build = "0.9.2"
built = "0.5"
toml = "0.8.19"
