[package]
name = "raftify"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../README.md"

[dependencies]
async-trait = "0.1.48"
bincode = "1.3"
bytes = "1.5.0"
heed = "0.20.5"
heed-traits = "0.20"
log = { version = "0.4", features = ["std"] }
parking_lot = "0.12.1"
prost = "0.11"
jopemachine-raft = { path = "../raft-rs", features = ["prost-codec", "default-logger"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2"
slog-stdlog = "4"
thiserror = "1.0"
tokio = { version = "1.4", features = ["full"] }
tonic = "0.9.2"
built = "0.5"
clap = { version = "4.5.15", features = ["derive"] }
chrono = "0.4.31"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.9.2"
built = "0.5"
