[package]
name = "raftify"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../README.md"

[dependencies]
async-trait = "0.1.82"
bincode = "1.3"
bytes = "1.7.2"
heed = "0.20.5"
heed-traits = "0.20"
log = { version = "0.4", features = ["std"] }
parking_lot = "0.12.3"
prost = "0.11"
raft = { version = "0.7.9", features = ["prost-codec", "default-logger"], default-features = false, package = "jopemachine-raft" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2"
slog-stdlog = "4"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
tonic = "0.9.2"
built = "0.5"
clap = { version = "4.5.18", features = ["derive"] }
chrono = "0.4.38"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.9.2"
built = "0.5"
