[package]
name = "raftify"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../README.md"

[dependencies]
async-trait = "0.1.82"
bincode = "1.3"
bytes = "1.7.2"
log = { version = "0.4", features = ["std"] }
parking_lot = "0.12.3"
prost = "0.11"
raft = { version = "0.7.13", features = ["prost-codec", "default-logger"], default-features = false, package = "jopemachine-raft" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2"
slog-stdlog = "4"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
tonic = { version = "0.9.2" }
built = "0.5"
chrono = "0.4.38"
heed = { version = "0.20.5", optional = true }
heed-traits = { version = "0.20", optional = true }
rocksdb = { version = "0.19.0", optional = true }
config = "0.14.0"

[features]
default = ["heed_storage", "tls"]
inmemory_storage = []
heed_storage =["heed", "heed-traits"]
rocksdb_storage = ["rocksdb"]
tls = ["tonic/tls"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.9.2"
built = "0.5"
