[package]
name = "raftify-js"
version = "0.1.78"
authors = ["Lablup Inc."]
license = "Apache-2.0"
repository = "https://github.com/lablup/raftify"
readme = "./README.md"
homepage = "https://github.com/lablup/raftify"
description = """
Experimental High level Raft framework
"""
keywords = ["raft", "distributed-systems", "consensus-algorithm", "replication", "distributed-database"]
categories = ["distributed-systems", "database-implementations"]
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bincode = "1.3.3"
napi = { version = "3.0.0-alpha.13", features = ["tokio", "tokio_rt", "tokio_fs", "async", "napi6"] }
napi-derive = { version = "3.0.0-alpha.13" }
raftify = { version = "=0.1.78", features = ["heed_storage"], default-features = false }
raftify_cli = { version = "=0.1.1" }
serde = "1.0.210"
slog = "2.7.0"
slog-async = "2.8.0"
slog-envlogger = "2.2.0"
slog-term = "2.9.1"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
napi-build = "1"

[lib]
name = "raftify_js"
crate-type = ["cdylib"]

[workspace]
