[package]
name = "raftify-py"
version = "0.1.28"
authors = ["Lablup Inc."]
license = "Apache-2.0"
repository = "https://github.com/lablup/raftify"
readme = "./README.md"
homepage = "https://github.com/lablup/raftify"
description = """
Experimental High level Raft framework
"""
keywords = ["raft", "distributed-systems", "consensus-algorithm", "replication", "distributed-database"]
categories = ["distributed-systems", "database-implementations"]
edition = "2021"

[dependencies]
pyo3 = { git = "https://github.com/jopemachine/pyo3", features = ["extension-module", "multiple-pymethods"] }
tokio = { version = "1.4", features = ["full"] }
async-trait = "0.1.48"
raftify = { version = "0.1.28", default-features = false }
slog = { version = "2.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-envlogger = "2.1.0"
slog-term = "2.9.0"
slog-stdlog = "4"
slog-async = "2.7.0"
sloggers = "2.1.2"
fxhash = "0.2.1"
bincode = "1.3.3"
bytes = "1.0"
once_cell = "1.7"
prost = "0.11"
lazy_static = "1.4.0"

[lib]
name = "raftify"
crate-type = ["cdylib"]

[workspace]
