[package]
name = "raftify-py"
version = "0.1.78"
authors = ["Lablup Inc."]
license = "Apache-2.0"
repository = "https://github.com/lablup/raftify"
readme = "./README.md"
homepage = "https://github.com/lablup/raftify"
description = """
Experimental High level Raft framework
"""
keywords = ["raft", "distributed-systems", "consensus-algorithm", "replication", "distributed-database"]
categories = ["distributed-systems", "database-implementations"]
edition = "2021"

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module", "multiple-pymethods"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
pythonize = "0.20.0"
tokio = { version = "1.4", features = ["full"] }
async-trait = "0.1.48"
raftify = { version = "=0.1.78", features = ["heed_storage"], default-features = false }
raftify_cli = { version = "=0.1.1" }
slog = { version = "2.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-envlogger = "2.1.0"
slog-term = "2.9.0"
slog-stdlog = "4"
slog-async = "2.7.0"
sloggers = "2.1.2"
serde = { version = "1.0", default-features = false, features = ["std"] }
fxhash = "0.2.1"
bincode = "1.3.3"
bytes = "1.0"
once_cell = "1.7"
prost = "0.11"

[lib]
name = "raftify"
crate-type = ["cdylib"]

[workspace]
