[package]
name = "dynamic_cluster"
version = "0.1.0"
authors = ["jopemachine <gbl@lablup.com>"]
edition = "2021"

[[bin]]
name = "raftify-cli"
path = "src/cli/main.rs"

[dependencies]
actix-rt = "2.0"
actix-web = "4.0.0"
async-trait = "0.1.48"
bincode = "1.3"
log = { version = "0.4", features = ["std"] }
raftify = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
slog-async = "2"
slog-term = "2"
slog = "2"
slog-stdlog = "4"
slog-scope = "4.4"
slog-envlogger = "2.2"
env_logger = "0.8"
structopt = "0.3"
tokio = { version = "1.4", features = ["full"] }
toml = "0.8.8"
