[package]
name = "memstore-example-harness"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[[bin]]
name = "raftify-cli"
path = "src/cli/main.rs"

[[bin]]
name = "raftify-client-example"
path = "src/client/main.rs"

[dependencies]
raftify.workspace = true

actix-rt = "2.0"
actix-web = "4.0.0"
async-trait = "0.1.48"
bincode = "1.3"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.4", features = ["full"] }
color-backtrace = "0.6.1"
