[package]
name = "memstore-example-harness"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[[bin]]
name = "raftify-cli"
path = "src/cli/main.rs"

[[bin]]
name = "raftify-client-example"
path = "src/client/main.rs"

[dependencies]
actix-rt = "2.10"
actix-web = "4.9.0"
async-trait = "0.1.82"
bincode = "1.3"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
color-backtrace = "0.6.1"
raftify = { version = "0.1.78" }
raftify_cli = { version = "0.1.1" }

[features]
default = ["heed_storage"]
inmemory_storage = []
heed_storage =[]
