[package]
name = "memstore-static-members"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
raftify.workspace = true
example-harness.workspace = true
memstore-example-harness.workspace = true

actix-rt = "2.10"
actix-web = "4.9.0"
async-trait = "0.1.82"
bincode = "1.3"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
slog-async = "2"
slog-term = "2"
slog = { version = "2", features = ["max_level_trace", "release_max_level_trace"] }
slog-envlogger = "2.2"
structopt = "0.3"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8.19"
color-backtrace = "0.6.1"

[features]
default = ["heed_storage"]
inmemory_storage = []
heed_storage = []
rocksdb_storage = []
